--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js"
   },
-  "author": "",
+  "author": "Gustavo",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
